fixed main structure (spacing issue on app content section and aside-bar)

--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,14 @@ aside{
     background-color: var(--bg-color-aside_blue);
     height: 100%;
     background-image: url(../img/sidebar-bg.png); 
-
 }
 /**************** ASIDE *****************/
 
-
+/**************** APP CONTENT *****************/
+#app-content{
+    display: inline-block;
+    overflow: auto;
+}
 /**************** SECTION-TOP *****************/
 
 /**************** SECTION-TOP *****************/
@@ -45,4 +48,5 @@ aside{
 /**************** SECTION-BOT *****************/
 
 /**************** SECTION-BOT *****************/
+/**************** APP CONTENT *****************/
 /**************** MAIN *****************/
